moved a fonts default_theme.css, fixed a little oopsie referring to #container instead of #wrap

--- a/public/screen.css
+++ b/public/screen.css
@@ -1,7 +1,7 @@
-*           { margin: 0; padding: 0 }
-html        { font-family: "Helvetica Neue", "Arial", sans-serif }
-body        { font-size: 76% }
-#container  { font-size: 1.1em }
+*     { margin: 0; padding: 0 }
+table { border-collapse: collapse }
+body  { font-size: 76% }
+#wrap { font-size: 1.1em }
 
 h3 { font-size: 1.8em }
 h2 { font-size: 2.2em }
